HTML and CSS basics
I've finished the basic CSS and HTML elements.

Current issues:
-Colour scheme is far from complete
-Elements go missing as the screen shrinks
-Java plugins are needed in order to make it work as intended.

--- a/Corgiwrites-dash.html
+++ b/Corgiwrites-dash.html
@@ -3,48 +3,47 @@
 
 <head>
   <title>Corgiwrites_dashboard</title>
-  <link rel="stylesheet" href="corgiwrites-dash.css"
+  <link rel="stylesheet" type="text/CSS" href="Corgiwrites-dash.css">
 
 </head>
 
 <body>
 
   <!--heading -->
-  <div class="header">
+  <div class="header_background">
     <!--container-->
     <div class="header">
       <h1 class="header">
       Corgiwrites
       </h1>
       <!--buttons-->
-      <a class="header_b" href="Needed">Submit or update story</a>
-      <a class="header_b" href="Needed">Submit or update market</a>
-      <a class="header_b" href="Needed">Update wordcount</a>
+      <a class="header header_b" href="Needed">Submit or update story</a>
+      <a class="header header_b" href="Needed">Submit or update market</a>
+      <a class="header header_b" href="Needed">Update wordcount</a>
     </div>
   </div>
 
   <!--timeline navigation-->
-  <div class="timeline">
-    <!--container-->
+  <div class="timeline_background">
+  <!--container-->
     <div class="timeline">
       <h4 class="timeline">
-      View by:
+        View by:
       </h4>
-      <!--buttons-->
-      <a class="timeline_b" href="Needed">Day</a>
-      <a class="timeline_b" href="Needed">Week</a>
-      <a class="timeline_b" href="Needed">Month</a>
-      <a class="timeline_b" href="Needed">Year</a>
-      <a class="timeline_b" href="Needed">All Time</a>
+        <!--buttons-->
+        <a class="timeline_b" href="Needed">Day</a>
+        <a class="timeline_b" href="Needed">Week</a>
+        <a class="timeline_b" href="Needed">Month</a>
+        <a class="timeline_b" href="Needed">Year</a>
+        <a class="timeline_b" href="Needed">All Time</a>
     </div>
   </div>
-
   <!--sidebar-->
-  <div class="sidebar">
+  <div class="sidebar_background">
     <!--container-->
     <div class="sidebar">
       <!--buttons-->
-      <a class="side_b" href="Needed">View stories</a>
+      <a class="side_b" id="top_b_time" href="Needed">View stories</a>
       <a class="side_b" href="Needed">View submissions</a>
       <a class="side_b" href="Needed">View markets</a>
       <a class="side_b" href="Needed">Wordcounts</a>
@@ -52,8 +51,9 @@
       <a id="logout" href="Needed"></a>
     </div>
   </div>
-  <!--story display-->
-
+<!--story display-->
+  <div class="story_display">
+  </div>
   <!--footer-->
 </body>
 
