Slightly more formatting

--- a/Corgiwrites-dash.html
+++ b/Corgiwrites-dash.html
@@ -55,6 +55,11 @@
   <div class="story_display">
   </div>
   <!--footer-->
+  <div class="footer">
+    <h5 class="footer">
+      Corgiwrites
+    </h5>
+  </div>
 </body>
 
 </html>
